--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.12",
+        "sopamo/laravel-filepond": "^1.2",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
