--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.12",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "3.0",
         "realrashid/sweet-alert": "^7.0",
         "sopamo/laravel-filepond": "^1.2",
         "spatie/laravel-permission": "^5.10"
