--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
         "fakerphp/faker": "^1.9.1",
         "laravel-lang/common": "^3.1",
         "laravel/pint": "^1.0",
